# Mango-Rust

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  build-css.sh  build.rs  docker-compose.yml  env.example  package-lock.json  package.json  watch-css.sh
.github/workflows/: docker-publish.yml  integration-tests.yml
.sqlx/: query-7a324633f898fc72d37826c1d70ca43afabda1628a6bdb24addbdd5272dc182e.json  query-be0352ce6ec0c399e700c3740f5e817a69cf8f32b1c0f1f88f75d1ab980e3a3f.json  query-fa26740c4ec796def178ea57819b762aa9330800bf933f3ccec628707387b24d.json
docs/: CACHING.md
docs/plans/: 2026-02-02-rar-cbr-implementation.md  2026-02-02-rar-cbr-support-design.md  2026-02-04-integration-test-redesign.md
migrations/: 001_users.sql  002_ids.sql  002_titles.sql  003_ids.sql  004_thumbnails.sql  004_unavailable.sql  005_tags.sql  006_display_name.sql  007_dimensions.sql
src/: auth.rs  config.rs  lib.rs  main.rs  server.rs  storage.rs  util.rs
src/routes/: admin.rs  api.rs  book.rs  login.rs  main.rs  mod.rs  (+3 more)
templates/: admin.html  base.html  book.html  book_content.html  book_scripts.js  cache_debug.html  change-password.html  home.html  home_content.html  layout.html  library.html  library_content.html  library_scripts.js  library_styles.css  login.html  missing-items.html  opds_index.xml  opds_title.xml  reader.css  reader.html  reader.js  reader_scripts.js  tag.html  tags.html  user-edit.html  users.html
tests/: .gitignore  README.md  RELIABILITY_REPORT.md  conftest.py  eslint.config.js  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  requirements.txt  test_auth.py  test_library.py  test_reader.py  test_sorting.py  tsconfig.json  vitest.config.ts
(+181 files in other folders)
