[package]
name = "mango-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tower-sessions = "0.11"
tower-sessions-sqlx-store = { version = "0.11", features = ["sqlite"] }
time = "0.3"  # For session expiry durations

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rmp-serde = "1.1"  # MessagePack serialization for cache
flate2 = "1.0"  # gzip compression for cache files
sha2 = "0.10"  # SHA256 for cache keys

# Authentication
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"

# Archive handling (Tier 1: ZIP only)
zip = "0.6"

# Image processing for thumbnails
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Templates
askama = "0.12"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"  # For home directory expansion
home = "=0.5.11"  # Pin to avoid edition2024 requirement
rand = "0.8"  # For random password generation
natord = "1.0"  # Natural number ordering for sorting
crc32fast = "1.4"  # CRC32 for directory signatures
sha1 = "0.10"  # SHA1 for contents signatures
percent-encoding = "2.3.2"

[dev-dependencies]
tempfile = "3.8"  # For test file isolation
